--- a/src/main/webapp/resources/css/modelo.css
+++ b/src/main/webapp/resources/css/modelo.css
@@ -18,7 +18,7 @@ body { overflow-x: hidden; }
 
 #divEstatisticaECCSuperiorEsquerda {
 	width: 560px;
-	height: 306px;
+	height: 300px;
 	float: left;
 	margin-right: 10px;
 	overflow: auto;
@@ -1086,7 +1086,7 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
 
 #divEstatisticaAtividadeEncontristaEquipeSuperiorDireita {
 	width: 100%;
-	height: 500px;
+	height: 300px;
 	margin-bottom: 10px;
 }
 
@@ -1138,17 +1138,39 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
 	overflow: auto;
 }
 
-#divEstatisticaChefeInferiorEsquerda {
+#divEstatisticaAtividadeEncontristaEquipeSuperiorDireita_01 {
 	width: 330px;
 	height: 500px;
 	float: left;
 	margin-right: 10px;
 	overflow: auto;
 }
-#divEstatisticaChefeInferiorEsquerda_01 {
-	width: 632px;
+
+#divEstatisticaChefeInferiorEsquerda {
+	width: 550px;
 	height: 500px;
 	float: left;
+	margin-right: 10px;
+	overflow: auto;
+	position: absolute;
+}
+
+#divEstatisticaChefeForaInferior {
+	width: 100%;
+	height: 500px;
+	margin-bottom: 10px;
+}
+
+#divEstatisticaChefeInferiorEsquerda_01 {
+	width: 545px;
+	height: 50px;
+	float: left;
+	margin-right: 10px;
+	overflow: auto;
+}
+#divEstatisticaChefeInferiorEsquerda_02 {
+	width: 545px;
+	height: 445px;
 	margin-right: 10px;
 	overflow: auto;
 }
@@ -1162,7 +1184,7 @@ divEstatisticaECCSuperiorEsquerda_01{
 
 #divEstatisticaECCSuperiorEsquerda_02 {
 	width: 545px;
-	height: 278px;
+	height: 255px;
 	margin-right: 10px;
 	overflow: auto;
 }
@@ -1419,7 +1441,7 @@ a{
 }
 
 #divLista_02 {
-	width: 70%;
+	width: 80%;
 	height: 20px;
 	float: left;
 }
