--- a/src/main/webapp/resources/css/modelo.css
+++ b/src/main/webapp/resources/css/modelo.css
@@ -8,12 +8,16 @@ body { overflow-x: hidden; }
 }
 
 #divEstatisticaECC {
-	width: 369px;
-	height: 284px;
+
+	width: auto;
+	height: 300px;
 	float: left;
+
+/*
 	margin-right: 10px;
 	border: 1px solid #c0c0c0;
 	border-radius:5px 5px 5px 5px;
+*/
 }
 
 #divEstatisticaECCSuperiorEsquerda {
@@ -1079,13 +1083,20 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
 	line-height: 1.3
 }
 
-#divEstatisticaECCAptidaoAtividades {
+#divEstatisticaGeral {
+	width: auto;
+	height: auto;
+	flex-wrap: wrap;
+	display: flex;
+	max-width: 100%;
+	/*
 	width: 100%;
 	height: 300px;
+	*/
 }
 
 #divEstatisticaAtividadeEncontristaEquipeSuperiorDireita {
-	width: 100%;
+	width: auto;
 	height: 300px;
 	margin-bottom: 10px;
 }
@@ -2260,7 +2271,7 @@ position: relative;
 
 #divBoxAptidao {
 	width: 325px;
-	height: 50px;
+	height: 43px;
 	float: left;
 	position: relative;
 	border-radius:3px 3px 0px 0px;
