--- a/src/main/webapp/resources/css/modelo2.css
+++ b/src/main/webapp/resources/css/modelo2.css
@@ -1103,11 +1103,12 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
 	height: 300px;
 }
 
-#divEstatisticaECCAptidaoAtividades {
+#divEstatisticaGeral {
 	width: 100%;
 	height: 300px;
 }
 
+/*
 #divEstatisticaECC {
 	position:relative;
 	width: 632px;
@@ -1115,6 +1116,7 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
 	background-color: green;
 	float: left;
 }
+*/
 
 #divEstatisticaChefeForaInferior {
 	width: 100%;
@@ -1730,12 +1732,15 @@ a{
 }
 
 #divEstatisticaECC {
+/*
 	width: 369px;
 	height: 60px;
 	float: left;
 	position: relative;
+*/
 	border-radius:4px 4px 0px 0px;
  	background-color: #e1e1d0;
+
 }
 
 #divBoxDentroGeral {
